fix(mds): fix jump nav to scroll

--- a/docs/src/components/css/style.css
+++ b/docs/src/components/css/style.css
@@ -95,3 +95,8 @@ table td {
 .docblock-argstable td {
   border: none;
 }
+
+.jump-nav {
+  overflow-y: scroll;
+  height: 100vh;
+}
